Remove repeated article from Readme & prevent horizontal scroll

--- a/style.css
+++ b/style.css
@@ -663,9 +663,12 @@ footer address {
   color: #38deb0;
   border-bottom: 4px solid #38deb0;
 }
+footer div.bar {
+  width: 100%;
+}
 .footerBar {
   margin-top: 4rem;
-  opacity: 0.4;
+  opacity: 0.1;
 }
 .graphicsCredits {
   padding-top: 4em;
